# handler_files

./: .gitignore  arqcsv.py  arqxlsx.py  main.py  pyproject.toml  settings.py
handler_files/: arqjson.py  arqtxt.py  arqzip.py
