[tool.poetry]
name = "handlerfiles"
version = "0.1.0"
description = ""
authors = ["Britodfbr <britodfbr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
xlsxwriter = "^1.3.7"
gspread = "^3.6.0"
oauth2client = "^4.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
